new test project

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Yuran-Luk/ReactButtonsScroll.git"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0"
   }
 }
